# ai-business-automation-demo

./: .gitignore  API_FIXES.md  API_README.md  CREATE_NEXTJS_APP.md  FEATURES.md  FINANCIAL_MODULE_GUIDE.md  Home.py  LICENSE  NEXT_STEPS.md  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUMMARY.md  app.py  generate_data.py  pyproject.toml  rebuild_chromadb.py  render.yaml  requirements.txt  setup_nextjs.py  setup_rag.py  start_api.bat  test_api.bat  test_api.ps1  test_chroma_load.py  test_financial_api.py  test_rag_agent.py  test_setup.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  financial_agent.py  financial_agent_langchain.py  financial_agent_langchain_old.py  inventory_agent.py  rag_chatbot_agent.py  support_agents.py
api/: main.py  models.py
api/routers/: financial.py  inventory.py  rag_chatbot.py  support.py
data/: inventory.csv  sales_2025_q3.csv  tickets.json
data/papers/: README.md
data/papers/rag_chroma/ab2c79ee-9a5e-4809-9363-d2d8d1ace4d4/: index_metadata.pickle
demofiles/: 1_📊_Financial_Report.py  3_📦_Inventory_Optimizer.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/financial/: page.tsx
frontend/app/(dashboard)/inventory/: page.tsx
frontend/app/(dashboard)/rag/: page.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx
pages/: 1_📊_Financial_Report.py  2_🎫_Support_Triage.py  3_📦_Inventory_Optimizer.py  4_💬_RAG_Chatbot.py  5_Source_Viewer.py
scripts/: scrape_arxiv_papers.py
tests/: __init__.py  test_utils.py
utils/: cost_calculator.py  data_loader.py  rebuild_vector_store.py  secrets_manager.py
(+1 files in other folders)
